Week 9: transform transactions + gold aggregates + tests

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ __pycache__/
 *.pyc
 # Local DuckDB database
 warehouse.duckdb
+# Python
+__pycache__/
+*.pyc
+
+# Data outputs
+data/processed/
+data/gold/
